# template_do_recife

./: .env.example  .gitignore  README.md  pyproject.toml
crews/do_recife_chat_crew/: pyproject.toml
crews/do_recife_chat_crew/src/do_recife_chat_crew/: main.py
crews/do_recife_chat_flow/: pyproject.toml
crews/do_recife_chat_flow/src/do_recife_chat_flow/: main.py
crews/do_recife_chat_flow/src/do_recife_chat_flow/agents/: __init__.py  do_recife_agent.py
crews/do_recife_chat_flow/src/do_recife_chat_flow/skills/do-recife-conversation/: SKILL.md
crews/do_recife_chat_flow/src/do_recife_chat_flow/tools/: __init__.py  do_recife_vector_search_tool.py
crews/do_recife_chat_flow/src/do_recife_chat_flow/types/: conversation.py
crews/do_recife_embedder/: pyproject.toml
crews/do_recife_embedder/src/do_recife_embedder/: main.py
crews/do_recife_embedder/src/do_recife_embedder/services/: __init__.py  pdf_embedding_service.py
crews/do_recife_embedder/src/do_recife_embedder/utils/: __init__.py  do_issue_parser.py  pdf_extractor.py  text_chunker.py
frontend/: Procfile  pyproject.toml
frontend/ui_do_recife/: .env.example  README.md  app.py
frontend/ui_do_recife/db/: __init__.py
frontend/ui_do_recife/static/css/: style.css
frontend/ui_do_recife/static/js/: app.js
frontend/ui_do_recife/templates/: index.html
src/template_do_recife/: __init__.py
