[project]
name = "do-recife-chat"
version = "0.1.0"
description = "Diário Oficial do Recife - Busca via Chat (Flask + SSE UI for a CrewAI AMP flow)"
requires-python = ">=3.13.12"
dependencies = [
    "flask>=3.0",
    "python-dotenv>=1.0",
    "requests>=2.32.5",
    "gunicorn>=22.0",
]

[tool.uv]
package = false
