[project]
name = "do_recife_chat_flow"
version = "0.1.0"
description = "do_recife_chat_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic]==1.15.0",
    "crewai-tools[mongodb]==1.15.0",
]

[project.scripts]
kickoff = "do_recife_chat_flow.main:kickoff"
run_crew = "do_recife_chat_flow.main:kickoff"
plot = "do_recife_chat_flow.main:plot"
run_with_trigger = "do_recife_chat_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
